Fix link color so leaf tags are not invisible

--- a/themes/timetree/assets/scss/pages/_global.scss
+++ b/themes/timetree/assets/scss/pages/_global.scss
@@ -56,7 +56,6 @@ a,
 a:link,
 a:hover,
 a:visited {
-  color: $body-bg-color;
   color: $body-fg-color;
   text-decoration: underline;
   text-decoration-color: #fecd70;
